--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -16,9 +16,9 @@ permissions:
 
 on:
   push:
-    branches: [ "master", "2.1.x" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "master", "2.1.x" ]
+    branches: [ "master" ]
   schedule:
     - cron: '39 1 * * 6'
 
@@ -39,6 +39,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      with:
+        persist-credentials: false
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
