--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,11 +52,11 @@ jobs:
         qemu: [ '' ]
         include:
           # Split ubuntu job for the sake of speed-up
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             qemu: aarch64
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             qemu: ppc64le
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             qemu: s390x
     steps:
       - name: Checkout
@@ -94,42 +94,6 @@ jobs:
           name: dist-${{ matrix.os }}-${{ matrix.qemu }}
           path: ./wheelhouse/*.whl
 
-  checksum:
-    name: Compute hashes
-    runs-on: ubuntu-latest
-    needs:
-      - build-wheels
-      - universal-wheel
-    outputs:
-      hashes: ${{ steps.compute.outputs.hashes }}
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Download distributions
-        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
-        with:
-          pattern: dist*
-          merge-multiple: true
-          path: dist
-      - name: Collected dists
-        run: |
-          tree dist
-      - name: Generate hashes
-        id: compute  #  needs.checksum.outputs.hashes
-        working-directory: ./dist
-        run: echo "hashes=$(sha256sum * | base64 -w0)" >> $GITHUB_OUTPUT
-
-  provenance:
-    needs: checksum
-    uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v2.1.0
-    permissions:
-      actions: read
-      id-token: write
-      contents: write
-    with:
-      base64-subjects: ${{ needs.checksum.outputs.hashes }}
-      upload-assets: true
-      compile-generator: true
-
   deploy:
     name: 🚀 Deploy to PyPi
     runs-on: ubuntu-latest
@@ -137,7 +101,9 @@ jobs:
     permissions:
       id-token: write
       contents: write
-    needs: provenance
+    needs:
+      - build-wheels
+      - universal-wheel
     environment:
       name: pypi
       url: https://pypi.org/project/charset-normalizer/
@@ -155,7 +121,52 @@ jobs:
         run: |
           tree dist
       - name: Publish package distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # release/v1
+        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
+      - name: Install Syft
+        run: |
+          curl -sSfL https://get.anchore.io/syft | sudo sh -s -- -b /usr/local/bin
+          syft version
+      - name: Generate SBOMs
+        run: |
+          set -euo pipefail
+          shopt -s nullglob
+
+          restore_from=""
+          restore_to=""
+
+          for pkg in dist/*.whl dist/*.tar.gz; do
+            original_pkg="$pkg"
+            original_base="$(basename -- "$original_pkg")"
+            out="dist/${original_base}.cdx.json"
+
+            if [[ "$original_pkg" == *.whl ]]; then
+              zip_pkg="${original_pkg%.whl}.zip"
+              zip_base="${original_base%.whl}.zip"
+              stem="${original_base%.whl}"
+
+              echo "Temporarily renaming ${original_base} -> ${zip_base}"
+              mv -- "$original_pkg" "$zip_pkg"
+              restore_from="$zip_pkg"
+              restore_to="$original_pkg"
+
+              echo "Generating SBOM for $original_base via $zip_base"
+              syft "file:$zip_pkg" -o cyclonedx-json > "$out"
+
+              tmp="$out.tmp"
+              jq --arg stem "$stem" '
+                (. | .. | objects | select(has("name")) | .name)
+                |= (if . == ($stem + ".zip") then $stem + ".whl" else . end)
+              ' "$out" > "$tmp" && mv "$tmp" "$out"
+
+              echo "Restoring ${zip_base} -> ${original_base}"
+              mv -- "$zip_pkg" "$original_pkg"
+              restore_from=""
+              restore_to=""
+            else
+              echo "Generating SBOM for $original_base"
+              syft "file:$original_pkg" -o cyclonedx-json > "$out"
+            fi
+          done
       - name: Upload dists to GitHub Release
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
