--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,9 +28,9 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3'
-      - name: Update pip, install build
+      - name: Install CI Requirements
         run: |
-          python -m pip install build
+          python -m pip install -r ci-requirements.txt --require-hashes
       - name: Build Wheel
         env:
           CHARSET_NORMALIZER_USE_MYPYC: '0'
