--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,9 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3'
-      - name: Install nox
-        run: python -m pip install nox
+      - name: Install CI Requirements
+        run: |
+          python -m pip install -r ci-requirements.txt --require-hashes
       - name: Pre-commit checks
         run: nox -s lint
 
@@ -53,8 +54,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
-      - name: Install dependencies
-        run: python -m pip install nox
+      - name: Install CI Requirements
+        run: |
+          python -m pip install -r ci-requirements.txt --require-hashes
       - name: Run tests
         run: nox -s test-${{ matrix.python-version }}
       - name: "Upload artifact"
@@ -81,8 +83,9 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3'
-      - name: Install dependencies
-        run: python -m pip install nox
+      - name: Install CI Requirements
+        run: |
+          python -m pip install -r ci-requirements.txt --require-hashes
       - name: Coverage WITH preemptive
         run: nox -s coverage -- --coverage 97 --with-preemptive
       - name: Coverage WITHOUT preemptive
@@ -118,8 +121,9 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3'
-      - name: Install dependencies
-        run: pip install nox
+      - name: Install CI Requirements
+        run: |
+          python -m pip install -r ci-requirements.txt --require-hashes
       - name: Integration Tests with Requests
         run: nox -s downstream_${{ matrix.downstream_project }}
 
@@ -136,8 +140,9 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3'
-      - name: Install dependencies
-        run: pip install nox
+      - name: Install CI Requirements
+        run: |
+          python -m pip install -r ci-requirements.txt --require-hashes
       - name: BC Coverage
         run: nox -s backward_compatibility -- --coverage 80
 
@@ -180,8 +185,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
-      - name: Install nox
-        run: pip install nox
+      - name: Install CI Requirements
+        run: |
+          python -m pip install -r ci-requirements.txt --require-hashes
       - name: Run tests with mypyc enabled
         run: nox -s test_mypyc-${{ matrix.python-version }}
       - name: "Upload artifact"
@@ -208,8 +214,9 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: "Install coverage"
-        run: "python -m pip install --upgrade coverage"
+      - name: Install CI Requirements
+        run: |
+          python -m pip install -r ci-requirements.txt --require-hashes
 
       - name: "Download artifact"
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0
@@ -243,7 +250,8 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3'
-      - name: Install dependencies
-        run: pip install nox
+      - name: Install CI Requirements
+        run: |
+          python -m pip install -r ci-requirements.txt --require-hashes
       - name: Performance Measurement
         run: nox -s performance
