--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=68,<=81"]
 build-backend = "backend"
 backend-path = ["_mypyc_hook"]
 
