--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -47,7 +47,7 @@ jobs:
     needs: pre_flight_check
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-14, ubuntu-24.04-arm]
+        os: [ubuntu-latest, windows-latest, macos-14, windows-11-arm, ubuntu-24.04-arm]
         qemu: [ '' ]
         include:
           # Split ubuntu job for the sake of speed-up
@@ -101,11 +101,12 @@ jobs:
     outputs:
       hashes: ${{ steps.compute.outputs.hashes }}
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - name: Download distributions
-        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a
+        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0
         with:
-          name: dist
+          pattern: dist*
+          merge-multiple: true
           path: dist
       - name: Collected dists
         run: |
